@@ -1,5 +1,6 @@
 CHANGES IN VERSION 1.7.2
 ------------------------
+ o fixed covplot to work with None RleViews of specific chromosome <2015-11-29, Sun>
  o addFlankGeneInfo now works with level="gene" <2015-11-19, Thu>
    + see https://github.com/GuangchuangYu/ChIPseeker/issues/18
  
